[package]
name = "cid"
version = "0.5.1"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[dependencies]
multihash = { git = "https://github.com/whalelephant/rust-multihash", branch = "nstd", default-features = false }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }
unsigned-varint = { default-features = false, version = "0.5.0"}

quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
multihash = { git = "https://github.com/whalelephant/rust-multihash", branch = "nstd", features = ["test"] }

[features]
default = ["std"]
std = []
test = ["quickcheck", "rand"]
